newclay/test/Compiler/Propagation/Fail/MultipleRvalueReference3/main.clay
eatRvalue(rvalue x) {}

main() {
    rvalue x = 5;
    if (true)
        eatRvalue(x);
    eatRvalue(x);
}
